master: ready to start with the query interaction styles.

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
   <base href="/">
+  <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
   <title>Lasso</title>
   <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
 </head>
