--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
+  <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
   <base href="/">
   <title>Lasso</title>
   <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
