--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
   <base href="/">
   <title>Lasso</title>
-  <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
+  <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.png">
 </head>
 <body>
   <app></app>
