--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
   <base href="/">
-  <title>Lasso</title>
+  <title>Lasso - Packager</title>
   <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.png">
 </head>
 <body>
